--- a/public/backend/css/communication.css
+++ b/public/backend/css/communication.css
@@ -245,14 +245,14 @@
 @media (max-width:575.98px) {
     .messages_box_area .messages_chat .message_send_field {
         grid-template-columns: 1fr;
-        margin-top: 20px
+        /* margin-top: 20px */
     }
 }
 
 .messages_box_area .messages_chat .message_send_field input {
     color: #000;
     font-size: 13px;
-    /* height: 40px; */
+    height: 40px;
     width: 100%;
     border-radius: 5px;
     padding-left: 25px;
@@ -266,9 +266,6 @@
     opacity: 1
 }
 
-i.ti-search {
-    color: var(--system_primery_color) !important;
-}
 
 .messages_chat {
     max-height: 725px;
