--- a/public/backend/css/backend_style.css
+++ b/public/backend/css/backend_style.css
@@ -421,9 +421,9 @@ table.dataTable th {
     }
 
     table.dataTable>tbody>tr.child span.dtr-title {
-        width: 50%;
+        /* width: 50%; */
         text-align: left;
-        padding: 10px 18px 10px 10px;
+        /* padding: 10px 18px 10px 10px; */
         border-bottom: 0
     }
 
@@ -434,15 +434,15 @@ table.dataTable th {
         border-bottom: 0
     }
 
-    table.dataTable>tbody>tr.child ul.dtr-details>li:first-child {
+    /* table.dataTable>tbody>tr.child ul.dtr-details>li:first-child {
         padding-left: 0
-    }
+    } */
 
-    table.dataTable>tbody>tr.child ul.dtr-details>li {
+    /* table.dataTable>tbody>tr.child ul.dtr-details>li {
         display: flex;
         flex-direction: row-reverse;
         align-items: flex-start
-    }
+    } */
 
     .dataTables_wrapper .dataTables_paginate {
         margin-top: 3.5em
@@ -649,6 +649,9 @@ button:focus {
 
 .exam-bg {
     background: rgba(130, 139, 178, .3)
+}
+.custom_list_style li{
+    list-style: none;
 }
 
 .fw-400 {
@@ -930,16 +933,11 @@ button:focus {
 
 .white-box {
     background: #fff;
-    padding: 40px 30px;
+    padding: 40px 15px;
     border-radius: 10px;
     box-shadow: 0 10px 15px rgba(236, 208, 244, .3)
 }
 
-@media (max-width:1300px) and (min-width:992px) {
-    .white-box {
-        padding: 30px 15px
-    }
-}
 
 .white-box.single-summery {
     padding: 21px 30px;
@@ -2519,15 +2517,7 @@ body.login .footer_area a {
 }
 
 @media (max-width:991px) {
-    #sidebar {
-        min-width: 50%;
-        max-width: 50%;
-        margin-left: -50%
-    }
-}
-
-@media (max-width:991px) {
-
+    
     #sidebar,
     #sidebar.active {
         z-index: 999;
@@ -2538,6 +2528,14 @@ body.login .footer_area a {
     #sidebar.active {
         margin-left: 0
     }
+    #sidebar {
+        min-width: 40%;
+        max-width: 40%;
+        margin-left: -50%
+    }
+    #sidebar .sidebar-header {
+    padding: 26px 5px 26px 26px !important;
+}
 }
 
 #sidebar .sidebar-header {
@@ -3833,6 +3831,10 @@ body.client.color {
     .client .banner-area .banner-inner .banner-content h2 {
         font-size: 40px
     }
+    .sms-breadcrumb.white-box{
+        padding: 12px 10px !important;
+    }
+   
 }
 
 .client .banner-inner {
@@ -4418,9 +4420,31 @@ body.client.color {
 }
 
 @media (max-width:767px) {
+  
+    .update_sidebar i {
+        height: 30px !important;
+        width: 30px !important;
+        line-height: 30px !important;
+    }
+    div.dt-buttons{
+        position: relative !important;
+        top: -10px !important;
+    }
     .client .single-footer-widget .social_widget {
         text-align: center;
         margin-top: 20px
+    }
+    .up_st_admin_visitor .dataTables_filter>label {
+        margin-top: 0;
+        position: relative !important;
+        top: 0 !important;
+        margin-bottom: 20px !important;
+        width: 100% !important;
+        left: 0 !important;
+        right: 0 !important;
+        transform: translate(0) !important;
+        max-width: 100% !important;
+        border-radius: 0
     }
 }
 
@@ -4758,10 +4782,12 @@ body.client.color {
 
 @media (max-width:575px) {
     #sidebar {
-        max-width: 80%;
-        margin-left: -80%;
-        min-width: 80%;
-        z-index: 9999 !important
+        max-width: 65% !important;
+        min-width: 65% !important;
+        margin-left: -65%;
+    }
+    .sidebar #sidebar_menu li a{
+        padding: 9px !important;
     }
 }
 
@@ -5071,11 +5097,11 @@ body.client.color {
     box-shadow: none
 }
 
-@media (max-width:991px) {
+/* @media (max-width:991px) {
     .main-title {
         margin-top: 0
     }
-}
+} */
 
 .fc .fc-button-group>* {
     float: left;
@@ -5343,15 +5369,15 @@ body.client.color {
     }
 }
 
-@media (max-width:575.98px) {
+/* @media (max-width:575.98px) {
     .up_st_admin_visitor .dataTables_filter>label {
         margin-top: 0;
         position: relative;
         top: 0;
         margin-bottom: 20px
     }
-}
-
+} */
+/* 
 @media only screen and (min-width:576px) and (max-width:767px) {
     .up_st_admin_visitor .dataTables_filter>label {
         margin-top: 0;
@@ -5365,7 +5391,7 @@ body.client.color {
         max-width: 100%;
         border-radius: 0
     }
-}
+} */
 
 @media (min-width:768px) and (max-width:991.98px) {
     .up_st_admin_visitor .dataTables_filter>label {
@@ -5379,7 +5405,9 @@ body.client.color {
 div.dt-buttons {
     position: absolute;
     top: -56px;
-    right: 0
+    right: 0;
+    display: flex;
+    justify-content: space-between;
 }
 
 @media (min-width:992px) and (max-width:1199.98px) {
@@ -7883,7 +7911,7 @@ table.dataTable.dtr-inline.collapsed>tbody>tr.parent>th:first-child:before {
     top: 0;
     z-index: 99;
     position: relative;
-    margin: 0 0 60px
+    /* margin: 0 0 60px */
 }
 
 @media (max-width:575.98px) {
@@ -7898,7 +7926,7 @@ table.dataTable.dtr-inline.collapsed>tbody>tr.parent>th:first-child:before {
     }
 }
 
-@media (max-width:991px) {
+/* @media (max-width:991px) {
     .header_iner {
         margin: 0
     }
@@ -7914,7 +7942,7 @@ table.dataTable.dtr-inline.collapsed>tbody>tr.parent>th:first-child:before {
     .header_iner {
         margin: 0
     }
-}
+} */
 
 .header_iner .page_tittle h3 {
     font-size: 18px;
@@ -10881,12 +10909,6 @@ tspan {
     }
 }
 
-@media only screen and (min-width:576px) and (max-width:767px) {
-    .common_table_header {
-        flex-direction: column;
-        align-items: flex-start
-    }
-}
 
 @media only screen and (min-width:768px) and (max-width:991px) {
     .common_table_header {
@@ -10971,11 +10993,11 @@ tspan {
     }
 }
 
-@media (max-width:575.98px) {
+/* @media (max-width:575.98px) {
     .common_table_header .main-title {
         margin-bottom: 15px
     }
-}
+} */
 
 @media (max-width:575.98px) {
     .common_table_header .table_btn_wrap {
@@ -12132,10 +12154,12 @@ table.dataTable thead .sorting_desc:after {
     visibility: hidden;
     transition: .3s
 }
-
+table.dataTable > tbody > tr.child ul.dtr-details > li{
+    padding-left: 0px;
+}
 @media (max-width:575.98px) {
     .Menu_NOtification_Wrap {
-        width: 300px;
+        width: 250px;
         transform: translateY(30px) translateX(55px)
     }
 }
@@ -12651,10 +12675,10 @@ table.dataTable thead .sorting_desc:after {
     color: #fff;
     transition: .3s
 }
-
+/* 
 .primary-btn.semi_large2 {
     line-height: 50px !important
-}
+} */
 
 .primary-btn.semi_large45 {
     line-height: 45px !important
@@ -17276,13 +17300,13 @@ input:hover {
 
 @media only screen and (max-width:480px) {
     .student-details .nav-tabs .nav-item {
-        max-width: 50%;
-        flex: 0 0 50%;
+        /* max-width: 50%;
+        flex: 0 0 50%; */
         margin-bottom: 0
     }
 
     .student-details .nav-tabs .nav-link {
-        padding: 8px 0;
+        padding: 8px;
         text-align: center
     }
 
@@ -17483,6 +17507,9 @@ div.dt-buttons {
     border: 1px solid rgba(66, 119, 255, .07);
     border-radius: 22px;
     min-height: 277px
+}
+.permission_list{
+    padding: 0px !important;
 }
 
 @media only screen and (min-width:1440px) and (max-width:1580px) {
