--- a/public/backend/css/communication.css
+++ b/public/backend/css/communication.css
@@ -46,7 +46,9 @@
     margin-top: 30px;
     margin-bottom: 30px;
     max-height: 500px;
-    overflow-y: scroll
+    overflow-y: scroll;
+    list-style: none;
+    padding: 0px;
 }
 
 .messages_box_area .messages_list ul .unseen {
