--- a/public/frontend/infixlmstheme/css/frontend_style.css
+++ b/public/frontend/infixlmstheme/css/frontend_style.css
@@ -3798,7 +3798,7 @@ input[type="number"] {
     }
 
     .about_gallery_area .about_gallery .gallery_box .thumb.small_thumb {
-        margin: 30px 0 0 30px;
+        margin: 30px 0 0 30px !important;
     }
 }
 
